force-app/main/default/objects/Judgement_Case_Violations__c/fields/Case_Violation__c.field-meta.xml
<CustomField>
    <fullName>Case_Violation__c</fullName>
    <label>Case Violation</label>
    <referenceTo>DIR_Violation__c</referenceTo>
    <relationshipName>Judgement_Case_Violations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>