force-app/main/default/objects/Judgement_Case_Violations__c/fields/Interest_Due__c.field-meta.xml
<CustomField>
    <fullName>Interest_Due__c</fullName>
    <formula>Case_Violation__r.Interest_Balance_Due__c * Liability_Judgement__r.Liable_Party__r.Proportionate_Share__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>