force-app/main/default/objects/Judgement_Case_Violations__c/fields/Judgement_Category__c.field-meta.xml
<CustomField>
    <fullName>Judgement_Category__c</fullName>
    <formula>TEXT(Case_Violation__r.Violation_Type__r.Judgement_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Judgment Category</label>
    <type>Text</type>
</CustomField>